@@ -1910,22 +1910,19 @@ function(package, dir, file, lib.loc = NULL,
 		if (allow_suppress &&
                     name %in% suppressForeignCheck(, package))
 		    return ("SYMBOL OK") # skip false positives
-                if (have_registration || !allow_suppress) {
+                if (have_registration) {
                     if (name %in% fr) {
-                        if (have_registration) { # at least for now
-                            other_problem <<- c(other_problem, e)
-                            other_desc <<-
-                                c(other_desc,
-                                  sprintf("symbol %s in the local frame%s",
-                                          sQuote(name),
-                                          if(!have_registration) ", but no registered symbols" else ""))
-                        }
+                        other_problem <<- c(other_problem, e)
+                        other_desc <<-
+                            c(other_desc,
+                              sprintf("symbol %s in the local frame",
+                                      sQuote(name)))
                     } else {
                         other_problem <<- c(other_problem, e)
-                        other_desc <<- c(other_desc,
-                                         sprintf("symbol %s not in namespace%s",
-                                             sQuote(name),
-                                                 if(!have_registration) ", which does not have registered symbols" else ""))
+                        other_desc <<-
+                            c(other_desc,
+                              sprintf("symbol %s not in namespace",
+                                      sQuote(name)))
                     }
                 }
     	    	return("OTHER")
